# dook-shopping-list

./: Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
app/: .dev.env  pyproject.toml
app/shopping_list/: bootstrap.py  config.py  init.py
app/shopping_list/adapters/db/: __init__.py  models.py  repo_sqlalchemy.py  session.py
app/shopping_list/api/: deps.py  resp_models.py  web.py
app/shopping_list/domain/: __init__.py  commands.py  fridge.py  models.py  recipe.py  shopping_list.py
app/shopping_list/service/: fridge.py  message_bus.py  shopping_list.py
app/tests/api/: test_web.py
app/tests/domain/: test_fridge.py  test_shopping_list.py
app/tests/helpers/: data_generators.py  utils.py
shopping_list/: config.py
shopping_list/adapters/db/: __init__.py  model_base.py  repo_sqlalchemy.py  repository_base.py  session.py
shopping_list/api/: web.py
shopping_list/domain/: commands.py  models.py
shopping_list/service/: shopping_list.py
tests/: conftest.py
tests/api/: conftest.py  test_web.py
tests/domain/: test_shopping_list.py
tests/entrypoints/: test_web.py
tests/helpers/: data_generators.py  recipes.py
