[tool.poetry]
name = "shopping-list"
version = "0.1.0"
description = ""
authors = ["r2r <aart.st@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.7.3"
attrs = "^20.3.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
